--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ Ready. Set. Let&#39;s [[play!]]
 
 
 
-This interactive experience is in the very early stages of development and reamins under construction.</tw-passagedata><tw-passagedata pid="2" name="play!" tags="" position="200,100" size="100,100">(enchant:?page,(bg:white))
+This interactive experience is in the very early stages of development and remains under construction.</tw-passagedata><tw-passagedata pid="2" name="play!" tags="" position="200,100" size="100,100">(enchant:?page,(bg:white))
 (text-colour:black)[=
 You are an advanced social work practitioner newly hired to work in a community-based agency that provides mental and behavioral health services to adults.
 
